--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   dependencies:
   flutter_otp_text_field: ^1.1.0+2
+  google_nav_bar: ^5.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
